# axum_assessment_web_server

./: .gitignore  Cargo.toml  README.md
public/nested/: sample.json
src/: lib.rs  main.rs
src/router/: home.rs  mod.rs
templates/: home.html
tests/: assessment.rs
